<resources>
    <string name="app_name">ReimburseHelper</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sun_refresh_style">Sun refresh style</string>
    <string name="jet_refresh_style">Jet refresh style</string>
    <string name="polite_message">Wait a moment please. Breathe deeply and watch beautiful animation.</string>
    <string name="trip_to_india">Trip to India</string>
    <string name="trip_to_italy">Trip to Italy</string>
    <string name="trip_to_indonesia">Trip to Indonesia</string>

    <string name="text">Squid blog crucifix Marfa, consectetur vero placeat mixtape. Non seitan sriracha eu, do Banksy fashion axe cred qui vegan delectus consequat Helvetica mollit. XOXO gluten-free disrupt, gastropub officia cliche chillwave hella pop-up. Fixie swag raw denim, YOLO craft beer assumenda occupy veniam photo booth pug consectetur next level Portland tote bag +1. Mlkshk PBR aliquip placeat Wes Anderson.</string>
    <string name="title">My Description</string>
    <string name="context_menu">Context menu</string>
    <string name="remark">请填写报销备注</string>
    <string name="hint_fee">请填报销金额</string>
    <string name="select_pic">票据原件照片\n（必选）</string>
    <string name="submit">提交</string>
    <string name="finish">完成</string>
    <string name="approval">审批</string>
    <string name="rejection_reason">驳回理由</string>
    <string name="hint_input">请填写审批名称</string>
    <string name="pass">通过</string>
    <string name="unpass">不通过</string>
    <string name="my_pdf_form">生成并查看我的报销单</string>
    <string name="add_expense_item">新增报销项</string>
    <string name="approval_name">审批名称</string>
    <string name="select_company">选择加入公司</string>
    <string name="register_company">注册公司</string>
    <string name="hint_input_code">请输入公司邀请码</string>
    <string name="wait_approval">审批中</string>
    <string name="approval_finish">已审批</string>
    <string name="edit">编辑</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="search">查找</string>
    <string name="notice">提示</string>
    <string name="cancel">取消</string>

    <string-array name="approval_no">　
        <item>1</item>　
        <item>2</item>　　
        <item>3</item>　　
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
