<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEE"
    android:orientation="vertical"
    tools:context="com.sas.rh.reimbursehelper.view.activity.AddBaoxiaojizhuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#1882CE"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/backbt"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:srcCompat="@mipmap/return_icon" />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
        <TextView
            android:id="@+id/textView10"
            style="@style/white_big_style"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="报销单"
            android:textColor="#FFF" />
        <TextView
            android:id="@+id/tv_submit_pdf"
            style="@style/white_big_style"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:text="完成"
            android:visibility="visible"
            android:textColor="#FFF" />
     </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView11"
                    style="@style/black_middle_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="报销单类型" />


                <RelativeLayout
                    android:id="@+id/ll_expense_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:layout_width="@dimen/dimen_150"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <TextView
                            android:id="@+id/tv_expense_sencond"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen_35"
                            android:gravity="center"
                            android:text="@string/pass"
                            android:visibility="gone" />

                        <com.warmtel.expandtab.ExpandPopTabView
                            android:id="@+id/expandable_list_view"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:gravity="center" />
                    </FrameLayout>


                    <ImageView
                        android:id="@+id/iv_select"
                        android:layout_width="@dimen/dimen_20"
                        android:layout_height="@dimen/dimen_35"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/dimen_20"
                        android:src="@drawable/ic_arrow_down" />

                </RelativeLayout>


            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#DDD"></FrameLayout>

            <LinearLayout
                android:id="@+id/ll_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_68"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_remark_title"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dimen_30"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/dimen_5"
                        android:layout_weight="1"
                        android:background="@drawable/bg_rectangle"
                        android:gravity="center"
                        android:text="报销类别"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edt_fee"
                        style="@style/gray_noraml_small_style"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dimen_30"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/dimen_5"
                        android:layout_weight="0.8"
                        android:background="@drawable/bg_rectangle"
                        android:gravity="center"
                        android:hint="@string/hint_fee"
                        android:inputType="number" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dimen_48"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@drawable/bg_rectangle"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/select_pic"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/iv_photo"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/ic_grid_add" />
                    </LinearLayout>


                </LinearLayout>


                <EditText
                    android:id="@+id/edt_remark"
                    style="@style/gray_noraml_middle_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_remark_title"
                    android:layout_margin="@dimen/divider_height"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:background="@null"
                    android:hint="@string/remark"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_finish_remark"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_below="@+id/edt_remark"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_save_baoxiajizhu"
                    android:gravity="center"
                    android:text="完成"
                    android:textColor="#FFF"
                    android:textSize="18dp" />
            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/billlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="350dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:id="@+id/tv_add_expense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:background="@drawable/btn_save_baoxiajizhu"
                android:gravity="center"
                android:paddingBottom="@dimen/dimen_3"
                android:paddingTop="@dimen/dimen_3"
                android:text="@string/add_expense_item"
                android:textColor="#FFF"
                android:textSize="18dp" />


        </LinearLayout>
    </ScrollView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen_10"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_pdf_icon"
        android:layout_width="@dimen/dimen_30"
        android:layout_height="@dimen/dimen_33"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimen_5"
        android:visibility="gone"
        android:src="@drawable/ic_file_pdf"/>

    <TextView
        android:id="@+id/tv_pdf_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10"
        android:background="@drawable/btn_save_baoxiajizhu"
        android:gravity="center"
        android:text="@string/my_pdf_form"
        android:textColor="#FFF"
        android:textSize="18dp" />

</LinearLayout>


</LinearLayout>

