<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEE"
    android:orientation="vertical"
    tools:context="com.sas.rh.reimbursehelper.view.activity.AddBaoxiaojizhuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#1882CE"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/backbt"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/return_icon" />

        <TextView
            android:id="@+id/textView10"
            style="@style/white_big_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="报销单"
            android:textColor="#FFF" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="10"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView11"
                        style="@style/black_middle_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="报销单类型" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_expense_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/xflxsp"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:visibility="gone" />

                    <com.warmtel.expandtab.ExpandPopTabView
                        android:id="@+id/expandable_list_view"
                        android:layout_width="wrap_content"

                        android:layout_height="35dp" />

                </LinearLayout>


            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#DDD"></FrameLayout>

            <LinearLayout
                android:id="@+id/ll_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_68"

                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_remark_title"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dimen_30"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/dimen_5"
                        android:layout_weight="1"
                        android:background="@drawable/bg_rectangle"
                        android:gravity="center"
                        android:text="报销类别"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edt_fee"
                        style="@style/gray_noraml_small_style"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dimen_30"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/dimen_5"
                        android:layout_weight="0.8"
                        android:background="@drawable/bg_rectangle"
                        android:gravity="center"
                        android:hint="@string/hint_fee"
                        android:inputType="number" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dimen_48"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@drawable/bg_rectangle"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/select_pic"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/iv_photo"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/ic_grid_add" />
                    </LinearLayout>


                </LinearLayout>


                <EditText
                    android:id="@+id/edt_remark"
                    style="@style/gray_noraml_middle_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_remark_title"
                    android:layout_margin="@dimen/divider_height"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:background="@null"
                    android:hint="@string/remark"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_finish_remark"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_below="@+id/edt_remark"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_save_baoxiajizhu"
                    android:gravity="center"
                    android:text="完成"
                    android:textColor="#FFF"
                    android:textSize="18dp" />
            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/billlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="500dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:id="@+id/addandbacktv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:background="@drawable/btn_save_baoxiajizhu"
                android:gravity="center"
                android:text="新增报销单"
                android:textColor="#FFF"
                android:textSize="18dp" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="bottom|center"
        android:layout_weight="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textSize="18dp"
            android:gravity="center"
            android:layout_marginLeft="@dimen/dimen_10"
            android:background="@drawable/btn_save_baoxiajizhu"
            android:text="保存并返回"/>
    </LinearLayout>
</LinearLayout>

